<resources>
    <string name="app_name">ParkFinder</string>
    <string name="appTitleTxt">Van Parks</string>
    <string name="nameSearchTxt">Search by Name</string>
    <string name="locationSearchTxt">Search by Location</string>
    <string name="txtFeatureSearch">Search by Feature</string>
    <string name="txtSeeAll">See All</string>
    <string name="txtSeeFavourites">See Favourites</string>
    <string name="btnSearch">Search</string>

    <string name="yourLocation">Enter Your Location</string>
    <string name="parkName">Enter the park name to search</string>
    <string name="title_activity_maps">Map</string>
    <string name="noParkFound">No Park Found</string>

    <string name="addFavourite">Add to favourites</string>
    <string name="removeFavourite">Remove from favourites</string>

    <string name="addressTxt"><b>Address:</b> </string>
    <string name="washroomTxt"><b>Washroom:</b> </string>
    <string name="facilitiesTxt"><b>Facilities:</b> </string>
    <string name="featuresTxt"><b>Features:</b> </string>
    <string name="neighbourhoodNameTxt"><b>Neighbourhood:</b> </string>

</resources>
